syntax = "proto3";

option go_package = "pokestocks/proto/pokemon_stock_pair";

package pokemon_stock_pair;

message GetPokemonStockPairRequest {
  oneof input {
    string pokemonName = 1;
    int32 pokedexNumber = 2;
    string stockName = 3;
    string stockSymbol = 4;
  }
}